--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
               <li><a href="#">Contact Us</a></li>
             </ul>
           </nav>
-          <button
-            class="bg-gradient-to-r from-[#FE34B9] to-[#903AFF] rounded-sm px-5 p-2 w-[172px]"
+          <a
+            href="#"
+            class="bg-gradient-to-r from-[#FE34B9] to-[#903AFF] rounded-sm px-5 p-2 w-[172px] text-center"
+            >Register</a
           >
-            Register
-          </button>
         </div>
 
         <div class="flex lg:hidden">
@@ -74,11 +74,11 @@
           Participate in getlinked tech Hackathon 2023 stand <br />
           a chance to win a Big prize
         </p>
-        <button
-          class="bg-gradient-to-r from-[#FE34B9] to-[#903AFF] rounded-sm p-2 w-[172px]"
+        <a
+          href="#"
+          class="bg-gradient-to-r from-[#FE34B9] to-[#903AFF] rounded-sm px-5 p-2 w-[172px] text-center"
+          >Register</a
         >
-          Register
-        </button>
 
         <div class="flex gap-4 mt-14 lg:text-6xl text-5xl">
           <p class="">00<span class="text-sm">H</span></p>
@@ -290,11 +290,11 @@
             whether it addresses a real-world problem in a novel way or
             introduces innovative features.
           </p>
-          <button
-            class="bg-gradient-to-r from-[#FE34B9] to-[#903AFF] rounded-sm px-5 p-2 w-[172px]"
+          <a
+            href="#"
+            class="bg-gradient-to-r from-[#FE34B9] to-[#903AFF] rounded-sm px-5 p-2 w-[172px] text-center"
+            >Read More</a
           >
-            Read More
-          </button>
         </div>
 
         <img
@@ -597,11 +597,290 @@
         </div>
       </div>
     </div>
+
+    <!-- Rewards -->
     <div
-      class="flex text-white lg:px-[40px] px-[20px] flex-col relative items-center justify-center space-y-10 border-b-[2px] border-[#FFFFFF] border-opacity-[18%] py-12"
+      class="flex flex-col lg:flex-col text-white lg:px-[40px] px-[20px] relative items-center justify-center space-y-10 border-b-[2px] border-[#FFFFFF] border-opacity-[18%] py-12 overflow-hidden"
     >
-      <h1 class="text-center">More Comming Soon</h1>
+      <div
+        class="flex flex-col lg:items-start items-center relative justify-start bg-blue800 mb-10 lg:w-1/2 w-full ml-auto"
+      >
+        <h2 class="font-bold text-[32px] text-center lg:text-left">
+          Prizes and
+          <br />
+          <span class="text-[#D434FE]">Rewards</span>
+        </h2>
+
+        <p class="text-center lg:text-start">
+          Highlight of the prizes or rewards for winners and for participants.
+        </p>
+      </div>
+
+      <div
+        class="flex lg:flex-row flex-col space-y-11 lg:space-y-0 items-center justify-center relative w-full"
+      >
+        <div>
+          <img src="./build/imgs/9486889 1.png" alt="" />
+        </div>
+        <div>
+          <img src="./build/imgs/Rewards.png" alt="" />
+        </div>
+      </div>
+
+      <img
+        src="./build/imgs/star pu.png"
+        alt=""
+        class="absolute top-0 lg:left-[20rem] left-0"
+      />
+      <img src="./build/imgs/star.png" alt="" class="absolute top-[10em]" />
+      <img src="./build/imgs/star (1).png" alt="" class="absolute right-0" />
+      <img
+        src="./build/imgs/star.png"
+        alt=""
+        class="absolute bottom-0 lg:left-[20rem] left-0"
+      />
+      <img
+        src="./build/imgs/star (1).png"
+        alt=""
+        class="absolute bottom-0 right-0 lg:right-[20rem]"
+      />
+
+      <img
+        src="./build/imgs/Purple-Lens-Flare-PNG.png"
+        alt=""
+        class="absolute left-0 top-11 -z-60 w-[450px] rotate-180"
+      />
+
+      <img
+        src="./build/imgs/Purple-Lens-Flare-PNG.png"
+        alt=""
+        class="absolute -right-[10rem] lg-bottom-8 bottom-20 -z-60 w-[450px]"
+      />
     </div>
+
+    <!-- Patners -->
+    <div
+      class="flex flex-col lg:flex-col text-white lg:px-[40px] px-[20px] relative items-center justify-center space-y-10 border-b-[2px] border-[#FFFFFF] border-opacity-[18%] py-12 overflow-hidden"
+    >
+      <div class="flex flex-col items-center justify-center text-center">
+        <h2 class="text-[32px] font-bold">Partners and Sponsors</h2>
+        <p class="text-[14px] w-[70%]">
+          Getlinked Hackathon 1.0 is honored to have the following major
+          companies as its partners and sponsors
+        </p>
+      </div>
+
+      <div class="relative">
+        <img src="./build/imgs/Partner and sponsors section.png" alt="" />
+        <img
+          src="./build/imgs/star pu.png"
+          alt=""
+          class="absolute -top-20 left-10"
+        />
+        <img
+          src="./build/imgs/star pu.png"
+          alt=""
+          class="absolute top-32 right-52 w-[50px]"
+        />
+      </div>
+
+      <img
+        src="./build/imgs/Purple-Lens-Flare-PNG (1).png"
+        alt=""
+        class="absolute lg:w-[500px] w-[200px] -top-[37px] left-0"
+      />
+      <img
+        src="./build/imgs/Purple-Lens-Flare-PNG (1).png"
+        alt=""
+        class="absolute bottom-0 lg:w-[500px] w-[200px] -right-20 rotate-90"
+      />
+
+      <img src="./build/imgs/star (1).png" alt="" />
+    </div>
+
+    <!-- T&C -->
+    <div
+      class="flex flex-col lg:flex-row text-white lg:px-[40px] px-[20px] relative items-center justify-center space-y-10 border-b-[2px] border-[#FFFFFF] border-opacity-[18%] py-12 overflow-hidden"
+    >
+      <div class="flex flex-col lg:w-1/2 w-[90%] relative">
+        <div
+          class="flex flex-col lg:items-start items-center relative justify-start bg-blue800 mb-10"
+        >
+          <h2 class="font-bold text-[32px] text-center lg:text-left">
+            Privacy Policy and
+            <br />
+            <span class="text-[#D434FE]">Terms</span>
+          </h2>
+          <p class="text-center lg:text-start">
+            Last updated on September 12, 2023
+          </p>
+
+          <p class="text-center lg:text-start mt-8">
+            Below are our privacy & policy, which outline a lot of goodies. it's
+            our aim to always take of our participant
+          </p>
+
+          <img
+            src="./build/imgs/star (1).png"
+            alt=""
+            class="absolute -top-9 right-0"
+          />
+        </div>
+
+        <div
+          class="p-5 bg-[#d9d9d90a] border-[#D434FE] border-[1px] flex flex-col items-start justify-center"
+        >
+          <p class="mb-9">
+            At getlinked tech Hackathon 1.0, we value your privacy and are
+            committed to protecting your personal information. This Privacy
+            Policy outlines how we collect, use, disclose, and safeguard your
+            data when you participate in our tech hackathon event. By
+            participating in our event, you consent to the practices described
+            in this policy.
+          </p>
+
+          <h3 class="text-[#D434FE] mb-5">Licensing Policy</h3>
+          <h3 class="font-bold mb-5">
+            Here are terms of our Standard License:
+          </h3>
+          <ul class="mb-5">
+            <li class="flex flex-row align-baseline mb-5 gap-3">
+              <img
+                src="./build/imgs/list terms.png"
+                alt=""
+                class="w-[17px] h-[17px]"
+              />
+              <p class="leading-6">
+                The Standard License grants you a non-exclusive right to
+                navigate and register for our event
+              </p>
+            </li>
+            <li class="flex flex-row align-baseline mb-5 gap-3">
+              <img
+                src="./build/imgs/list terms.png"
+                alt=""
+                class="w-[17px] h-[17px]"
+              />
+              <p class="leading-6">
+                The Standard License grants you a non-exclusive right to
+                navigate and register for our event
+              </p>
+            </li>
+          </ul>
+
+          <div class="w-full grid place-content-center">
+            <a
+              href=""
+              class="bg-gradient-to-r from-[#FE34B9] to-[#903AFF] rounded-sm px-5 p-2 w-[172px] text-center"
+              >Read More</a
+            >
+          </div>
+        </div>
+
+        <img
+          src="./build/imgs/Purple-Lens-Flare-PNG (1).png"
+          alt=""
+          class="absolute -left-[10rem] -bottom-[10rem] w-[500px] -rotate-90"
+        />
+      </div>
+
+      <div class="flex lg:w-1/2 w-[90%] items-center justify-center">
+        <img src="./build/imgs/Group 10.png" alt="" />
+      </div>
+    </div>
+
+    <!-- Footer -->
+    <footer class="relative lg:px-24">
+      <div
+        class="flex flex-col lg:flex-row text-white lg:px-[40px] px-[20px] relative items-center justify-between py-12 overflow-hidden space-y-14 lg:space-y-0"
+      >
+        <div
+          class="flex flex-col items-start justify-center lg:max-w-[33%] pr-16 w-full"
+        >
+          <div>
+            <h1 class="text-3xl font-bold">
+              get<span class="text-[#D434FE]">linked</span>
+            </h1>
+          </div>
+          <p class="mb-9">
+            Getlinked Tech Hackathon is a technology innovation program
+            established by a group of organizations with the aim of showcasing
+            young and talented individuals in the field of technology
+          </p>
+          <p>
+            Terms of Use<span class="text-[#D434FE] mx-3 font-bold">|</span
+            >Privacy Policy
+          </p>
+        </div>
+        <div
+          class="flex flex-col items-start justify-center lg:max-w-[33%] lg:pl-16 w-full"
+        >
+          <div class="">
+            <h1 class="text-3xl font-bold text-[#D434FE] mb-4">Useful Links</h1>
+            <ul>
+              <li class="mb-4"><a href="#">Overview</a></li>
+              <li class="mb-4"><a href="#">Timeline</a></li>
+              <li class="mb-4"><a href="#">FAQs</a></li>
+              <li class="mb-4"><a href="#">Register</a></li>
+            </ul>
+            <div class="flex items-center gap-8">
+              <p class="text-[#D434FE]">Follow us</p>
+              <img src="./build/imgs/mdi_instagram.png" alt="" />
+              <img src="./build/imgs/Vector.png" alt="" />
+              <img src="./build/imgs/Vector (1).png" alt="" />
+              <img src="./build/imgs/ri_linkedin-fill.png" alt="" />
+            </div>
+          </div>
+        </div>
+
+        <div
+          class="flex flex-col items-start justify-center lg:max-w-[33%] lg:pl-16 w-full"
+        >
+          <div class="">
+            <h1 class="text-3xl font-bold text-[#D434FE] mb-4">Useful Links</h1>
+            <ul>
+              <li class="mb-4 flex items-center gap-2">
+                <img src="./build/imgs/Group.png" alt="" />+234 6707653444
+              </li>
+              <li class="mb-4 flex items-center gap-2">
+                <img src="./build/imgs/Vector (2).png" alt="" />27,Alara Street
+                Yaba 100012 Lagos State
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+
+      <div
+        class="grid place-content-center w-full text-center text-white text-[14px] mb-8"
+      >
+        <p>All rights reserved. &copy; getlinked Ltd.</p>
+      </div>
+
+      <img
+        src="./build/imgs/star.png"
+        alt=""
+        class="absolute top-40 left-1 w-[20px]"
+      />
+
+      <img
+        src="./build/imgs/star pu.png"
+        alt=""
+        class="absolute bottom-0 w-[20px]"
+      />
+
+      <img
+        src="./build/imgs/star.png"
+        alt=""
+        class="absolute bottom-20 lg:right-40 right-6 w-[20px]"
+      />
+
+      <img
+        src="./build/imgs/star (1).png"
+        alt=""
+        class="absolute top-40 right-80 w-[20px]"
+      />
+    </footer>
 
     <!-- <form id="contactForm" class="">
       <label for="email">Enter Your Email</label><br />
