Changed the nav bar

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body class="bg-[#150E28] relative scroll-smooth">
     <!-- The mobile nav -->
     <div
-      class="fixed top-0 left-0 right-0 bottom-0 bg-[#150E28] lg:hidden z-50 overflow-hidden px-8 text-white font-bold py-36 hidden"
+      class="fixed top-0 left-0 right-0 bottom-0 bg-[#150E28] z-50 overflow-hidden px-8 text-white font-bold py-36 hidden"
       id="nav-mobile"
     >
       <div class="flex w-full items-end justify-end">
