--- a/contact.html
+++ b/contact.html
@@ -33,7 +33,7 @@
             </ul>
           </nav>
           <a
-            href="#"
+            href="./register.html"
             class="bg-gradient-to-r from-[#FE34B9] to-[#903AFF] rounded-sm px-5 p-2 w-[172px] text-center"
             >Register</a
           >
@@ -152,7 +152,7 @@
         />
         <img
           src="./build/imgs/Purple-Lens-Flare-PNG.png"
-          class="absolute bottom-0 right-0 w-[400px] lg:block hidden"
+          class="absolute bottom-0 right-0 w-[400px] lg:block hidden -z-20"
           alt=""
         />
         <img
