--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           </ul>
         </nav>
         <a
-          href="#"
+          href="./register.html"
           class="bg-gradient-to-r from-[#FE34B9] to-[#903AFF] rounded-sm px-7 py-2 text-center text-2xl"
           >Register</a
         >
@@ -72,7 +72,7 @@
             </ul>
           </nav>
           <a
-            href="#"
+            href="./register.html"
             class="bg-gradient-to-r from-[#FE34B9] to-[#903AFF] rounded-sm px-5 p-2 w-[172px] text-center"
             >Register</a
           >
@@ -118,7 +118,7 @@
           a chance to win a Big prize
         </p>
         <a
-          href="#"
+          href="./register.html"
           class="bg-gradient-to-r from-[#FE34B9] to-[#903AFF] rounded-sm px-5 p-2 w-[172px] text-center"
           >Register</a
         >
@@ -867,7 +867,7 @@
               <li class="mb-4"><a href="#overView">Overview</a></li>
               <li class="mb-4"><a href="#FAQs">Timeline</a></li>
               <li class="mb-4"><a href="#imeline">FAQs</a></li>
-              <li class="mb-4"><a href="#">Register</a></li>
+              <li class="mb-4"><a href="./register.html">Register</a></li>
             </ul>
             <div class="flex items-center gap-8">
               <p class="text-[#D434FE]">Follow us</p>
